// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom class on table body 1`] = `
<tbody
  className="foo"
/>
`;

exports[`Default render of table body 1`] = `
<tbody
  className=""
/>
`;

exports[`Table body with a couple rows 1`] = `
<tbody
  className=""
>
  <tr
    className="table-row"
  />
  <tr
    className="table-row"
  />
</tbody>
`;

exports[`Table body with an expandable row 1`] = `
<tbody
  className=""
>
  <tr
    className="table-row"
  />
</tbody>
`;

exports[`Table body with an expanded row 1`] = `
<tbody
  className=""
>
  <tr
    className="table-row"
  >
    <td
      className="table-expand-icon"
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right fa-2x"
      />
    </td>
  </tr>
</tbody>
`;
